scripts/nullness/wpi/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8.txt
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/utility/Point.java:23: error: (dereference.of.nullable) $$ 1 $$ topleft $$ ( 580, 587 ) $$ dereference of possibly-null reference topleft
        return topleft.x <= point.x && point.x <= bottomright.x &&
               ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/utility/Point.java:23: error: (dereference.of.nullable) $$ 1 $$ bottomright $$ ( 615, 626 ) $$ dereference of possibly-null reference bottomright
        return topleft.x <= point.x && point.x <= bottomright.x &&
                                                  ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:48: error: (method.invocation) $$ 3 $$ createCop() $$ @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController $$ @Initialized @NonNull GameController $$ ( 1745, 1756 ) $$ call to createCop() not allowed on the given receiver.
        gameField.addNewObject(createCop());
                                        ^
  found   : @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController
  required: @Initialized @NonNull GameController
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:49: error: (method.invocation) $$ 3 $$ createHobo() $$ @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController $$ @Initialized @NonNull GameController $$ ( 1790, 1802 ) $$ call to createHobo() not allowed on the given receiver.
        gameField.addNewObject(createHobo());
                                         ^
  found   : @UnderInitialization(ru.drunkard.game.GameController.class) @NonNull GameController
  required: @Initialized @NonNull GameController
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:86: error: (dereference.of.nullable) $$ 1 $$ gameField $$ ( 3243, 3252 ) $$ dereference of possibly-null reference gameField
        gameField.makeAllObjectsDoActions();
        ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:93: error: (dereference.of.nullable) $$ 1 $$ gameField $$ ( 3471, 3480 ) $$ dereference of possibly-null reference gameField
        List<Point> availableExits = gameField.getFreeNeighbours(new Point(TAVERN_X, TAVERN_Y), null);
                                     ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:117: error: (dereference.of.nullable) $$ 1 $$ gameField $$ ( 4736, 4745 ) $$ dereference of possibly-null reference gameField
        gameField.setObjectInSector(14, 4, newDrunkard);
        ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/game/GameController.java:147: error: (dereference.of.nullable) $$ 1 $$ gameField $$ ( 6187, 6196 ) $$ dereference of possibly-null reference gameField
        gameField.setObjectInSector(14, 3, column);
        ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:42: error: (dereference.of.nullable) $$ 1 $$ currentInfo $$ ( 1509, 1520 ) $$ dereference of possibly-null reference currentInfo
                if(neighbourInfo == null || neighbourInfo.pathLength > currentInfo.pathLength + 1) {
                                                                       ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:43: error: (dereference.of.nullable) $$ 1 $$ currentInfo $$ ( 1609, 1620 ) $$ dereference of possibly-null reference currentInfo
                    nodesInfo.put(neighbour, new BFSNodeInfo(current, currentInfo.pathLength + 1));
                                                                      ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/movestrategies/ShortestPathMoveStrategy.java:59: error: (dereference.of.nullable) $$ 1 $$ currentInfo $$ ( 2121, 2132 ) $$ dereference of possibly-null reference currentInfo
        while (!currentInfo.predecessor.equals(current)) {
                ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/HexGamePrinter.java:21: error: (dereference.of.nullable) $$ 1 $$ gameField $$ ( 598, 607 ) $$ dereference of possibly-null reference gameField
        Iterator<Point> fieldIter = gameField.getIterator();
                                    ^
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:28: error: (method.invocation) $$ 3 $$ initFramePart(java.util.List<java.lang.Character>,int) $$ @UnderInitialization @NonNull BasicGamePrinter $$ @Initialized @NonNull BasicGamePrinter $$ ( 926, 971 ) $$ call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameUpperPart, fieldWidth + 2);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:30: error: (method.invocation) $$ 3 $$ initFramePart(java.util.List<java.lang.Character>,int) $$ @UnderInitialization @NonNull BasicGamePrinter $$ @Initialized @NonNull BasicGamePrinter $$ ( 1026, 1072 ) $$ call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameBottomPart, fieldWidth + 2);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:32: error: (method.invocation) $$ 3 $$ initFramePart(java.util.List<java.lang.Character>,int) $$ @UnderInitialization @NonNull BasicGamePrinter $$ @Initialized @NonNull BasicGamePrinter $$ ( 1126, 1168 ) $$ call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameRightPart, fieldHeight);
                     ^
  found   : @UnderInitialization @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/BasicGamePrinter.java:34: error: (method.invocation) $$ 3 $$ initFramePart(java.util.List<java.lang.Character>,int) $$ @UnderInitialization(ru.drunkard.gameprinters.BasicGamePrinter.class) @NonNull BasicGamePrinter $$ @Initialized @NonNull BasicGamePrinter $$ ( 1221, 1262 ) $$ call to initFramePart(java.util.List<java.lang.Character>,int) not allowed on the given receiver.
        initFramePart(frameLeftPart, fieldHeight);
                     ^
  found   : @UnderInitialization(ru.drunkard.gameprinters.BasicGamePrinter.class) @NonNull BasicGamePrinter
  required: @Initialized @NonNull BasicGamePrinter
../original/url632301a43b_octomarat_Drunkard_tgz-pJ8-ru_drunkard_game_DrunkardTheGameJ8/src/ru/drunkard/gameprinters/RectGamePrinter.java:21: error: (dereference.of.nullable) $$ 1 $$ gameField $$ ( 600, 609 ) $$ dereference of possibly-null reference gameField
        Iterator<Point> fieldIter = gameField.getIterator();
                                    ^
17 errors
